# microgin

./: CMakeLists.txt  README.md
include/: CMakeLists.txt
include/micro/: Config.h  Context.hpp
include/microgin/: Config.h  Context.hpp  Dict.hpp  Engine.hpp  Exception.hpp  Types.hpp
lib/: CMakeLists.txt  Context.cpp
src/: CMakeLists.txt  Server.cpp
